# power-system-simulation-kA

./: .gitignore  LICENSE  README.md  agenda 09-05-2025.odt  pyproject.toml
.github/workflows/: build-and-test.yml
example/: final_presentation.ipynb
presentation/: final_presentation.ipynb
presentation/small_power_grid/: test_ev_line_summary.csv
presentation/tiny_power_grid/: output_table_row_per_line.parquet  output_table_row_per_timestamp.parquet
src/power_system_simulation/: data_validation.py  exceptions.py  graph_processing.py  grid_processing.py  input_data_validation.py  power_grid_calculation.py  power_grid_graph.py  power_grid_model.py  power_grid_simulation.py  simple_function.py
tests/: test_graph_processing.py  test_input_data_validation.py  test_power_grid_calculation.py  test_power_grid_model.py  test_simple_function.py  test_utilities.py
tests/test_data/incorrect_power_grids/: err_2_sources.json  err_2_transformers.json  err_duplicate_items.json  err_duplicate_items_transformer.json  err_ev_profile_too_few_profiles.parquet  err_graph_cycle.json  err_graph_not_connected.json  err_graph_not_connected_disabled.json  err_line_connected_both_sides_same_node.json  err_line_node_invalid.json  err_meta_data_invalid_feeder_id.json  err_meta_data_not_connected_to_busbar.json  err_source_node_id_invalid.json  err_sym_load_node_invalid.json  err_transformer_connected_both_sides_same_node.json  err_transformer_node_invalid.json  ev_active_power_profile.parquet  graph_cycle_disabled.json  graph_cycle_disabled_filtered_no_sym_loads.json  normal.json  normal_meta_data.json
tests/test_data/small_power_grid/: active_power_profile.parquet  input_network_data.json  meta_data.json  reactive_power_profile.parquet  test_line_summary.csv  test_voltage_summary.csv
tests/test_data/tiny_power_grid/: active_power_profile.parquet  reactive_power_profile.parquet  test_line_summary.csv  test_voltage_summary.csv
tests/test_power_grid_model_data/: input_network_data.json  test_line_summary.csv
