[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "power-system-simulation"
authors = [{name = "TU/e EES group"}]
description = "Student project for power system simulation"
readme = "README.md"
license = {text = "BSD License (BSD)"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License"
]
requires-python = ">=3.12"
# add dependencies of your core package, check the license first!
dependencies = ['NetworkX','pandas','numpy','power_grid_model','pyarrow']
version = "1.0"

[project.optional-dependencies]
dev = [
  'pytest',
  'black',
  'isort',
  'pylint',
  'pytest-cov',
  'pylint-per-file-ignores'
]

# add more dependencies for running the examples
example = [
  'jupyter'
]

[tool.setuptools.packages.find]
where = ["src"] 
namespaces = false 

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--cov=power_system_simulation", "--cov-report", "term", "--cov-report", "html:python_cov_html", "--cov-fail-under=95"]

[tool.black]
line-length = 120
target-version = ['py312']

[tool.isort]
profile = "black"
combine_as_imports = true
line_length = 120

[tool.pylint.main]
# Specify a score threshold under which the program will exit with error.
fail-under = 10
max-line-length = 120

[tool.pylint.MASTER]
load-plugins=[
    "pylint_per_file_ignores"
]

[tool.pylint.'MESSAGES CONTROL']
per-file-ignores = [
    "input_data_validation.py:W0702",
    "graph_processing.py:W0707,W1114",
    "power_grid_calculation.py:C0103,R0902,R0914"
]

# Minimum Python version to use for version dependent checks. Will default to the
# version used to run pylint.
py-version = "3.12"
